# swagcli

./: .coverage  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: aws_s3.py  azure_storage.py  custom_validator.py  github_api.py  petstore.py
swagcli/: __init__.py  auth.py  cache.py  cli.py  client.py  commands.py  commandstore.py  config.py  models.py
swagcli/plugins/: __init__.py  base.py  example.py  file_handler.py  metrics.py  rate_limiter.py  validator.py
tests/: test_auth.py  test_cache.py  test_client.py  test_config.py  test_plugins.py  test_plugins_file_handler.py  test_plugins_metrics.py  test_plugins_rate_limiter.py  test_plugins_validator.py
